tests/compile_failure/src/Core/NotNullScopePtr.assign_nullptr.fail.cpp
#include <Phi/Core/ScopePtr.hpp>

int main()
{
    phi::NotNullScopePtr ptr(new int(22));

    ptr = nullptr;
}
